# s3-bucket

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: file_insert_update.rs  json_insert_update.rs
examples/file_and_json/: Cargo.toml
examples/file_and_json/src/: Cargo.toml  main.rs
examples/json-example/: Cargo.toml
examples/json-example/src/: lib.rs
s3-bucket-derive/: Cargo.toml
s3-bucket-derive/src/: lib.rs
s3-bucket-derive/src/generators/: has_bucket_name.rs  has_content_type.rs  has_key.rs  has_static_key.rs  json_item.rs  key_builder.rs  mod.rs
s3-bucket-derive/src/struct_info/: mod.rs
s3-bucket-derive/src/utils/: as_expr.rs  mod.rs
src/: error.rs  lib.rs  s3_object.rs
src/s3_context/: mod.rs  s3_bucket.rs
src/traits/: has_bucket_name.rs  has_content_type.rs  has_key.rs  has_static_key.rs  key_builder.rs  mod.rs
