[package]
name = "s3-bucket-derive"
version = "0.2.1"
edition = "2024"
description = "A rust wrapper around aws-sdk-s3"
repository = "https://github.com/Salman-Sali/s3-bucket"
license = "MIT"
keywords = ["aws", "s3-bucket"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.11.2"
syn = "2.0.104"
